헤더의 etc 클래스명 수정

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                       </li>
                       <li>
                         <a href="#" data-category="etc">
-                          <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" class="etc" />
+                          <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" class="etcs" />
                           <span>기타</span>
                         </a>
                       </li>
