--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                       </li>
                       <li>
                         <a href="#" data-category="wood">
-                          <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" class="woods"/>
+                          <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" class="woods" />
                           <span>목재</span>
                         </a>
                       </li>
@@ -703,7 +703,7 @@
                   </div>
                 </div>
                 <div class="add-to-cart1">
-                  <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21,000" />
+                  <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21500" />
                 </div>
               </a>
             </div>
@@ -725,8 +725,8 @@
                     alt="장바구니에 담기"
                     class="add-icon cart-icon"
                     data-product-name="아차시픈 
-                    도자 귀걸이 반지 선물세트"
-                    data-price="56,000"
+                      도자 귀걸이 반지 선물세트"
+                    data-price="56000"
                   />
                 </div>
               </a>
@@ -749,8 +749,8 @@
                     alt="장바구니에 담기"
                     class="add-icon cart-icon"
                     data-product-name="lifesalm
-                    플라스틱 업사이클링 책상"
-                    data-price="32,000"
+                      플라스틱 업사이클링 책상"
+                    data-price="32000"
                   />
                 </div>
               </a>
@@ -1214,7 +1214,7 @@
       <!-- X 아이콘 -->
       <h2>장바구니 내용</h2>
       <ul id="cartItemsList"></ul>
-      <button onclick="purchaseItems()" class="popclose">구매하기</button>
+      <a href="payment.html" class="popclose"><button onclick="purchaseItems()">구매하기</button></a>
       <!-- 구매 버튼 -->
       <!-- </div> -->
     </div>
