--- a/about_us.html
+++ b/about_us.html
@@ -39,28 +39,40 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- 폰트어썸 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <script src="js/main.js"></script>
     <script src="js/about.js"></script>
     <script src="js/h.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/fix-btn.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/common.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/header_aboutus.css" />
     <!-- <link rel="stylesheet" href="css/head.css" /> -->
     <link rel="stylesheet" href="css/aboutus.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <title>B안 소개 'JUNKY FUNKY!'</title>
     <style>
       html {
         scroll-behavior: smooth;
       }
-
-
     </style>
   </head>
   <body>
+    <!-- 로그인 버튼 -->
+    <div class="fixed-buttons login-btn">
+      <div class="loginBt">
+        <a href="#">
+          <img src="images/btn/user-login.png" alt="유저 아이콘" class="loginbtn_img" />
+        </a>
+      </div>
+      <div class="loginBt_my">
+        <a href="#">
+          <img src="images/btn/user-my.png" alt="유저 마이 아이콘" />
+        </a>
+      </div>
+    </div>
     <div class="wrap">
       <header class="header">
         <div class="container">
@@ -129,7 +141,7 @@
                               <img src="images/A/icon/popup-icon/user_icon_my.png" alt="유저 아이콘" />
                             </a>
                           </div>
-  
+
                           <!-- <div class="cartBt">
                             <a href="#">
                               <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -215,17 +227,6 @@
                     <input type="text" id="searchMBInput" placeholder="모바일 검색어를 입력하세요" />
                   </a>
                 </div>
-                <div class="loginBt">
-                  <a href="#">
-                    <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
-                  </a>
-                </div>
-                <div class="loginBt_my" style="display: none;"> <!-- 초기에는 감춰져야 함 -->
-                  <a href="#">
-                    <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
-                  </a>
-                </div>
-  
                 <!-- <div class="cartBt">
                   <a href="#">
                     <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
